[gd_scene load_steps=9 format=2]

[ext_resource path="res://art/imgBorel/a.png" type="Texture" id=1]
[ext_resource path="res://assets/icons/speaker.png" type="Texture" id=2]
[ext_resource path="res://interfaceDescriptionGesture.gd" type="Script" id=3]
[ext_resource path="res://assets/theme/PhoneticTheme.tres" type="Theme" id=4]
[ext_resource path="res://assets/background.png" type="Texture" id=5]
[ext_resource path="res://assets/theme/ButtonTheme.tres" type="Theme" id=6]
[ext_resource path="res://assets/icons/back.png" type="Texture" id=7]
[ext_resource path="res://art/videoBorel/a.ogv" type="VideoStream" id=8]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
custom_constants/margin_right = 200
custom_constants/margin_top = 0
custom_constants/margin_left = 200
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 200.0
margin_right = 824.0
margin_bottom = 600.0
custom_constants/separation = 0
alignment = 1

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 226.0
margin_right = 624.0
margin_bottom = 262.0
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Description du son"
align = 1

[node name="MainBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 262.0
margin_right = 624.0
margin_bottom = 262.0

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/MainBox"]

[node name="Borel" type="TextureRect" parent="MarginContainer/VBoxContainer/MainBox/Control"]
margin_right = 200.0
margin_bottom = 200.0
rect_clip_content = true
theme = ExtResource( 4 )
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer/MainBox"]
margin_left = 4.0
margin_right = 4.0

[node name="Panel" type="ColorRect" parent="MarginContainer/VBoxContainer/MainBox/Control2"]
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.329412, 0.447059, 0.682353, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VideoPlayer" type="VideoPlayer" parent="MarginContainer/VBoxContainer/MainBox/Control2"]
stream = ExtResource( 8 )
autoplay = true
expand = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 262.0
margin_right = 624.0
margin_bottom = 374.0
theme = ExtResource( 4 )
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound" type="Label" parent="MarginContainer/VBoxContainer/EndBox"]
margin_right = 624.0
margin_bottom = 36.0
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "[u]"
align = 1

[node name="Name" type="Label" parent="MarginContainer/VBoxContainer/EndBox"]
margin_top = 56.0
margin_right = 624.0
margin_bottom = 92.0
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Uluberlu"
align = 1

[node name="Listen" type="TextureButton" parent="MarginContainer/VBoxContainer/EndBox"]
margin_left = 312.0
margin_top = 112.0
margin_right = 312.0
margin_bottom = 112.0
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource( 6 )
texture_normal = ExtResource( 2 )
expand = true

[node name="Back" type="Button" parent="."]
margin_right = 100.0
margin_bottom = 102.0
icon = ExtResource( 7 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="MarginContainer/VBoxContainer/MainBox/Control2/VideoPlayer" to="." method="_on_VideoPlayer_gui_input"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/EndBox/Listen" to="." method="_on_Speak_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Button_pressed"]
